# portfolio

./: '  .gitignore  INDEX.md  ISSUES.md  QUICK_FIXES.md  QUICK_START_GUIDE.md  README.md  ROADMAP.md  TASK_ANALYSIS.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
app/node/portfolio/: package-lock.json  package.json  vite.config.ts
app/node/portfolio/src/: App.vue  main.ts
app/node/portfolio/src/components/: titanic.vue
backend/: Dockerfile  ]  main.py  memo.md  pyproject.toml  requirements.txt
backend/models/: category.py  payment_method.py  session.py  transaction.py
backend/src/: dependencies.py  main.py
backend/src/models/: category.py  payment_method.py  session.py  transaction.py
backend/src/routers/: categories.py  payment_methods.py  transactions.py
backend/test/router/: test_transaction.py
docker/nginx/: Dockerfile
docker/nginx/conf/: default.conf
docker/node/: Dockerfile
docker/python/: Dockerfile
k8s/backend/: deployment.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
src/: database.py  main.py  schema.py
src/routers/: route_auth.py  route_todo.py
