[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["kami-yuuuu <92091721+kami-yuuuu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
